@@ -1151,8 +1151,8 @@ void
 InsertPointWKT(void)
 {
 	unsigned int u;
-	if (dump_format) printf("SRID=%s;POINT(",sr_id);
-	else printf("GeometryFromText('POINT (");
+	if (dump_format) printf("SRID=%s;%s(", sr_id, pgtype);
+	else printf("GeometryFromText('%s(", pgtype);
 
 	for (u=0;u<obj->nVertices; u++){
 		if (u>0) printf(",");
@@ -1643,6 +1643,9 @@ utf8 (const char *fromcode, char *inputbuf)
 
 /**********************************************************************
  * $Log$
+ * Revision 1.88.2.3  2005/07/27 02:05:20  strk
+ * Fixed handling of POINT types as WKT (-w) in loader
+ *
  * Revision 1.88.2.2  2005/07/01 14:22:40  strk
  * backported -I switch
  *
